--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/autolayout.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/autolayout.fxml
@@ -2,20 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import org.controlsfx.control.HiddenSidesPane?>
 
 <BorderPane fx:id="root" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <buttons>
 				<Button fx:id="refresh" mnemonicParsing="false" text="Refresh" />
-				<Button fx:id="edit" mnemonicParsing="false" text="Edit Query" />
+				<Button fx:id="toggle" mnemonicParsing="false" text="Show Query" />
 				<Button fx:id="showSchema" mnemonicParsing="false" text="Show Schema" />
          </buttons>
       </ButtonBar>
    </bottom>
    <center>
-      <HiddenSidesPane fx:id="masterDetail" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="anchor" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
