--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/graphiql.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/graphiql.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,28 +14,18 @@
 	<top>
 		<GridPane BorderPane.alignment="CENTER">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" prefWidth="496.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="196.0"
-					minWidth="7.0" prefWidth="45.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="146.0"
-					minWidth="10.0" prefWidth="59.0" />
+				<ColumnConstraints hgrow="ALWAYS" />
 			</columnConstraints>
 			<rowConstraints>
 				<RowConstraints vgrow="NEVER" />
 			</rowConstraints>
 			<children>
 				<TextField fx:id="url" />
-				<ProgressIndicator fx:id="loadProgress"
-					prefHeight="40.0" prefWidth="106.0" progress="0.0"
-					GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-				<Button fx:id="close" mnemonicParsing="false" text="Close"
-					GridPane.columnIndex="2" GridPane.halignment="CENTER" />
 			</children>
 		</GridPane>
 	</top>
 	<center>
-		<WebView fx:id="webview" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-			AnchorPane.topAnchor="0.0" />
+		<WebView fx:id="webview" minHeight="-1.0" minWidth="-1.0"
+			prefHeight="-1.0" prefWidth="-1.0" />
 	</center>
 </BorderPane>
