--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/ide.html
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/ide.html
@@ -10,22 +10,22 @@
 <html>
 <head>
 <style>
-body {
+html, body {
 	height: 100%;
 	margin: 0;
 	width: 100%;
-	overflow: hidden;
+	overflow: auto;
 }
 
 #graphiql {
-	height: 300vh;
+	height: 100vh;
 }
 </style>
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.0/graphiql.min.css" />
 <script src="http://cdn.jsdelivr.net/fetch/0.9.0/fetch.min.js"></script>
-<script src="http://cdn.jsdelivr.net/react/0.14.7/react.min.js"></script>
-<script src="http://cdn.jsdelivr.net/react/0.14.7/react-dom.min.js"></script>
+<script src="http://cdn.jsdelivr.net/react/15.0.1/react.min.js"></script>
+<script src="http://cdn.jsdelivr.net/react/15.0.1/react-dom.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.min.js"></script>
 </head>
